--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,8 +4,8 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Galaxy.io</title>
-        <script src='game.js'></script>
-        <link rel="stylesheet" href="style.css" />
+        <script src='./js/game.js'></script>
+        <link rel="stylesheet" href="./css/style.css" />
     </head>
     <body>
 
